NATTQA-ENV/force-app/main/default/objects/sbaa__TrackedField__c/sbaa__TrackedField__c.object-meta.xml
<CustomObject>
    <description>Field tracked by the parent approval rule.</description>
    <label>Tracked Field</label>
    <nameField>
        <displayFormat>TF-{00000}</displayFormat>
        <label>Tracked Field #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>