NATTQA-ENV/force-app/main/default/objects/sbaa__TrackedField__c/fields/sbaa__RecordField__c.field-meta.xml
<CustomField>
    <fullName>sbaa__RecordField__c</fullName>
    <description>Select the type of record to associate for created tracked fields. If the object is not Opportunity, be sure to create a new lookup field on the Tracked Field object.</description>
    <inlineHelpText>Field (on Tracked Value object) that represents a Lookup to its parent object</inlineHelpText>
    <label>Record Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>