NATTQA-ENV/force-app/main/default/objects/sbaa__TrackedField__c/fields/sbaa__TrackedObject__c.field-meta.xml
<CustomField>
    <fullName>sbaa__TrackedObject__c</fullName>
    <description>Object on which Tracked Field exists</description>
    <inlineHelpText>Object on which Tracked Field exists</inlineHelpText>
    <label>Tracked Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>